# wormhole-evm-integration-demo

./: .gitignore  Anchor.toml  README.md
evm/: .env.example  .example.env  .gitignore  README.md  foundry.toml  remappings.txt
evm/broadcast/Counter.s.sol/11155111/: run-1744879881.json  run-1744881070.json  run-1744882772.json
evm/broadcast/MessageReceiver.s.sol/11155111/: run-1744118628.json  run-1744118776.json  run-1744359519.json  run-latest.json
evm/broadcast/WhMessanger.s.sol/11155111/: run-1744886109.json  run-1744889150.json  run-1744891455.json
evm/broadcast/WhMessenger.s.sol/11155111/: run-1744897635.json  run-1745154855.json  run-1745230647.json  run-1745233492.json  run-1745244894.json  run-1745262696.json  run-1745316214.json  run-1745322075.json  run-1745323922.json  run-1745504789.json  run-1745504900.json  run-1745818623.json  run-latest.json
evm/script/: MessageReceiver.s.sol  WhMessanger.s.sol  WhMessenger.s.sol
evm/src/: MessageReceiver.sol  MessageSender.sol  Wh.sol  WhGetters.sol  WhMessages.sol  WhSetters.sol  WhState.sol  WhStructs.sol
programs/wormhole-evm-integration-demo/: Cargo.toml
programs/wormhole-evm-integration-demo/src/: lib.rs
svm/: .env  .example.env  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
svm/migrations/: deploy.ts
svm/migrations/helpers/: helpers.ts
svm/modules/wormhole-anchor-sdk/: Cargo.toml
svm/programs/svm-evm-demo/: Cargo.toml
svm/programs/svm-evm-demo/src/: context.rs  error.rs  lib.rs  message.rs
svm/programs/svm-evm-demo/src/state/: config.rs  foreign_emitter.rs  received.rs  wormhole_emitter.rs
svm/tests/: sepoliaAbi.json  svm-evm-demo.ts  whMessengerEvmAbi.json
svm/tests/helpers/: helpers.ts
tests/: wormhole-evm-integration-demo.ts
