[package]
name = "svm-evm-demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "svm_evm_demo"

[features]
default = ["testnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "wormhole-anchor-sdk/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
wormhole-io = { workspace = true }
solana-program = "2.2.1"
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", default-features = false }
